test/tests/errors/error-function-call.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = 1;
    output x(4);
}